[package]
name = "rhdl"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19"
regex = "1"
rug = "1.11"
derive_more = "0.99"

[dev-dependencies]
pretty_assertions = "0.6.1"