[package]
name = "rhdl"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"

[build-dependencies]
libflate = "1"

[dependencies]
lalrpop-util = { version = "0.19", features =  [ "lexer" ] }
rug = "1.11"
derive_more = { version = "0.99", features = [ "display" ] }
paste = "1"

[dev-dependencies]
pretty_assertions = "0.6.1"